--- a/src/IdentityServer4.OpenAPI/IdentityServer4.OpenAPI/IdentityServer4.OpenAPI.csproj
+++ b/src/IdentityServer4.OpenAPI/IdentityServer4.OpenAPI/IdentityServer4.OpenAPI.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
